<resources>
    <string name="app_name">DragoFus</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="validate">Valider</string>
    <string name="start">Commencer</string>
    <string name="next">Continuer</string>

    <!-- Initialize screen -->
        <!-- Initializing home fragment -->
        <string name="initializing_home_title">DragoFus</string>
        <string name="initializing_home_card_title">Bienvenue !</string>
        <string name="initializing_home_card_content">
            L\'application qui permet de \n
            &#8226; gérer des montures \n
            &#8226; réaliser des accouplements \n
            &#8226; et les succès élevage \n
            du MMORPG Dofus !
        </string>
        <string name="initializing_home_subcontent">
            Afin de paramétrer l\'application tu devras renseigner ton avancement sur les succès d\'élevages
        </string>

        <!-- Initializing setup fragment -->
        <string name="initializing_setup_title">Mise à jours des succès</string>
        <string name="initializing_setup_birth">Nombre de naissances : </string>
        <string name="initializing_setup_content">Renseignez votre avancement sur les succès d\'élevage !</string>
        <string name="initializing_setup_coupling">Nombre d\'accouplements : </string>
        <string name="initializing_setup_edit_hint">0</string>

        <!-- Initializing end fragment -->
        <string name="initializing_end_title">Terminé !</string>
        <string name="initializing_end_content">L\'appication est prête à l\'utilisation !</string>
        <string name="initializing_end_button">C\'est parti !</string>

    <!-- Dragodinde screen -->
        <!-- home dragodinde  fragment -->
        <string name="to_list_dragodinde_button">Mon enclos</string>
        <string name="to_list_coupling_button">Mes accouplements</string>
        <string name="to_achievement_button">Succès</string>

        <!-- Achievements fragment -->
        <string name="achievements_title">Succès</string>
        <string name="birth_title_achivement">Allez on pousse!</string>
        <string name="birth_desc_achivement">Faire naître 1000 montures: <br>%1$d / %2$d</br></string>
        <string name="coupling_title_achivement">Entremetteur!</string>
        <string name="coupling_desc_achivement">Réaliser 1000 accouplements: <br>%1$d / %2$d</br></string>
        <string name="generation_one">Première génération</string>
        <string name="generation_two">Deuxième génération</string>
        <string name="generation_tree">Troisième génération</string>
        <string name="generation_four">Quatrième génération</string>
        <string name="generation_five">Cinquième génération</string>
        <string name="generation_six">Sixième génération</string>
        <string name="generation_seven">Septième génération</string>
        <string name="generation_eight">Huitième génération</string>
        <string name="generation_nine">Neuvième génération</string>
        <string name="generation_ten">Dixième génération</string>

        <!-- List Dragodinde fragment -->
        <string name="male_filter_check_box">Male</string>
        <string name="female_filter_check_box">Femelle</string>
        <string name="is_pregnant_check_box">Fécondée</string>
        <string name="is_not_pregnant_check_box">Non féconde</string>
        <string name="is_fertile_filter_check_box">Féconde</string>
        <string name="is_sterile_filter_check_box">Stérile</string>
        <string name="list_dragodinde_title">Enclos</string>
        <string name="go_to_add_dragodinde_button">Ajouter une nouvelle dragodinde</string>
        <string name="search_name_hint">Rechercher une dragodinde</string>
        <string name="toggle_filter">Afficher / Masquer les filtes</string>
        <string name="filter">Filtrer par :</string>
        <string name="sort">Trier par :</string>
        <string name="name_radio_button">Nom</string>
        <string name="race_radio_button">Génération</string>
        <string name="no_dragodinde_from_list">Vous n\'avez pas encore de dragodinde</string>
        <string name="go_to_add_dragodinde_from_list">Ajouter une dragodinde</string>

        <!-- Dragodinde view holder -->
        <string name="nb_coupling_desc">Accouplements : </string>
        <string name="nb_coupling_view_holder"> %1$s /5</string>
        <string name="is_pregnant_view_holder"> Dragodinde fécondée</string>
        <string name="is_fertile_view_holder"> Dragodinde féconde</string>
        <string name="is_sterile_view_holder"> Dragodinde stérile</string>

        <!-- Add dragodinde fragment -->
        <string name="add_dragodinde_title">Dragodinde</string>
        <string name="add_dragodinde_name">Nom</string>
        <string name="add_dragodinde_name_placeholder">Anonyme</string>
        <string name="add_dragodinde_generation">Génération</string>
        <string name="add_dragodinde_is_fertile">Dragodinde féconde ?</string>
        <string name="add_dragodinde_is_from_coupling">Dragodinde née d\'un accouplement ?</string>
        <string name="add_dragodinde_gender">Genre :</string>
        <string name="add_dragodinde_nb_coupling">Accouplements :</string>
        <string name="add_dragodinde_nb_coupling_placeholder">/5</string>
        <string name="add_dragodinde_gestation">Gestation :</string>
        <string name="add_dragodinde_reproduction_placeholder">5</string>
        <string name="add_dragodinde_button">Ajouter la dragodinde à l\'enclos</string>

        <!-- List coupling fragment -->
        <string name="list_coupling_title">Accouplements</string>
        <string name="list_coupling_add_button">Réaliser un accouplement</string>
        <string name="no_coupling_from_list">Vous n\'avez actuellement aucun accouplement</string>
        <string name="go_to_add_coupling_from_list">Ajouter un accouplement</string>

        <!-- Add coupling fragment -->
        <string name="female_dragodinde_drop_list">Dragodindes femelles</string>
        <string name="male_dragodinde_drop_list">Dragodindes male</string>
        <string name="no_dragodinde_from_coupling">Vous n\'avez actuellement aucune dragodinde féconde</string>
        <string name="go_to_add_dragodinde_from_coupling">Ajouter des dragodindes</string>


</resources>