<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enclosure_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title_fragment"
        android:text="@string/list_dragodinde_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/search_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enclosure_title_textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toggle_filter_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_editText">

        <TextView
            android:id="@+id/toggle_filter_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/toggle_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/toggle_filter_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/arrow_down_float" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_filter_constraintLayout">

        <TextView
            android:id="@+id/filter_textView"
            style="@style/title_filter"
            android:text="@string/filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/male_filter_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/male_filter_check_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_textView" />

        <CheckBox
            android:id="@+id/female_filter_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:text="@string/female_filter_check_box"
            app:layout_constraintStart_toEndOf="@+id/male_filter_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/filter_textView" />

        <CheckBox
            android:id="@+id/pregnant_filter_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:text="@string/is_pregnant_check_box"
            app:layout_constraintStart_toEndOf="@+id/female_filter_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/filter_textView" />

        <CheckBox
            android:id="@+id/fertile_filter_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/is_fertile_filter_check_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/male_filter_checkBox" />

        <CheckBox
            android:id="@+id/sterile_filter_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_sterile_filter_check_box"
            app:layout_constraintStart_toEndOf="@+id/not_fertile_filter_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/pregnant_filter_checkBox" />

        <CheckBox
            android:id="@+id/not_fertile_filter_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_not_pregnant_check_box"
            app:layout_constraintStart_toEndOf="@+id/fertile_filter_checkBox"
            app:layout_constraintTop_toBottomOf="@+id/female_filter_checkBox" />

        <TextView
            android:id="@+id/sort_textView"
            style="@style/title_filter"
            android:text="@string/sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sterile_filter_checkBox" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_textView">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name_radio_button" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/race_radio_button" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dragodinde_list_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_add_dragodinde_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_constraintLayout" />

    <Button
        android:id="@+id/go_to_add_dragodinde_button"
        style="@style/bottom_button_fragment"
        android:text="@string/add_dragodinde_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>