<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_dragodinde_title_textView"
        style="@style/title_fragment"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_list_dragodinde_button"
        style="@style/dragodinde_home_button"
        android:text="@string/to_list_dragodinde_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_dragodinde_title_textView"
        app:layout_constraintBottom_toTopOf="@+id/go_to_list_coupling_button"/>

    <Button
        android:id="@+id/go_to_list_coupling_button"
        style="@style/dragodinde_home_button"
        android:text="@string/to_list_coupling_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_list_dragodinde_button"
        app:layout_constraintBottom_toTopOf="@+id/go_to_achievement_button"/>

    <Button
        android:id="@+id/go_to_achievement_button"
        style="@style/dragodinde_home_button"
        android:text="@string/to_achievement_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_list_coupling_button" />
</androidx.constraintlayout.widget.ConstraintLayout>