<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_dragodinde_title_textView"
        style="@style/title_fragment"
        android:text="@string/add_dragodinde_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/add_dragodinde_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_dragodinde_title_textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dragodinde_image_layout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/border_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/dragodinde_imageView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/dragodinde_name_title_textView"
                style="@style/input_title_add_dragodinde"
                android:text="@string/add_dragodinde_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_image_layout" />

            <EditText
                android:id="@+id/dragodinde_name_editText"
                style="@style/input_add_dragodinde"
                android:inputType="text"
                android:text="@string/add_dragodinde_name_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_name_title_textView" />

            <TextView
                android:id="@+id/dragodinde_race_title_textView"
                style="@style/input_title_add_dragodinde"
                android:text="@string/add_dragodinde_generation"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_name_editText" />

            <AutoCompleteTextView
                android:id="@+id/dragodinde_race_auto_complete"
                style="@style/input_add_dragodinde"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_race_title_textView" />

            <TextView
                android:id="@+id/dragodinde_gestation_title_textView"
                style="@style/input_title_add_dragodinde"
                android:text="@string/add_dragodinde_gestation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_race_auto_complete" />

            <TextView
                android:id="@+id/dragodinde_gestation_textView"
                style="@style/input_add_dragodinde"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text=""
                app:layout_constraintStart_toEndOf="@+id/dragodinde_gestation_title_textView"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_race_auto_complete" />

            <TextView
                android:id="@+id/dragodinde_coupling_nb_textView"
                style="@style/input_title_add_dragodinde"
                android:layout_marginStart="28dp"
                android:text="@string/add_dragodinde_nb_coupling"
                app:layout_constraintStart_toEndOf="@+id/dragodinde_gestation_textView"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_race_auto_complete" />

            <EditText
                android:id="@+id/dragodinde_coupling_nb_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ems="1"
                android:gravity="bottom"
                android:inputType="number"
                android:text="@string/add_dragodinde_reproduction_placeholder"
                app:layout_constraintStart_toEndOf="@+id/dragodinde_coupling_nb_textView"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_race_auto_complete" />

            <TextView
                android:id="@+id/dragodinde_max_coupling_nb_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="1"
                android:gravity="bottom"
                android:text="@string/add_dragodinde_nb_coupling_placeholder"
                app:layout_constraintStart_toEndOf="@+id/dragodinde_coupling_nb_editText"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_race_auto_complete" />

            <TextView
                android:id="@+id/dragodinde_gender_title_textView"
                style="@style/input_title_add_dragodinde"
                android:layout_marginTop="20dp"
                android:text="@string/add_dragodinde_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_gestation_textView" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                style="@style/input_add_dragodinde"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/dragodinde_gender_title_textView"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_gestation_textView">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/male_30"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/female_24"
                    android:layout_marginStart="10dp" />
            </RadioGroup>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dragodinde_is_fertile_switch"
                style="@style/switchAddDragodindeFragment"
                android:text="@string/add_dragodinde_is_fertile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_radio_group" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dragodinde_is_from_coupling_switch"
                style="@style/switchAddDragodindeFragment"
                android:checked="true"
                android:text="@string/add_dragodinde_is_from_coupling"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragodinde_is_fertile_switch" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_dragodinde_button"
        style="@style/bottom_button_fragment"
        android:text="@string/go_to_add_dragodinde_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>