<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_initializing_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/title_fragment"
        android:text="@string/initializing_setup_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_margin="12dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/validate_initializing_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_initializing_textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/validate_initializing_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_initializing_textView">

            <TextView
                android:id="@+id/content_initializing_textView"
                style="@style/initialize_content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initializing_setup_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/nb_coupling_constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_initializing_textView"
                app:layout_constraintBottom_toTopOf="@+id/nb_birth_constraintLayout">

                <TextView
                    android:id="@+id/nb_coupling_initializing_textView"
                    style="@style/initialize_field_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initializing_setup_coupling" />

                <EditText
                    android:id="@+id/nb_coupling_initializing_editTextNumber"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="number"
                    android:hint="@string/initializing_setup_edit_hint" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nb_birth_constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nb_coupling_constraintLayout">

                <TextView
                    android:id="@+id/nb_birth_initializing_textView"
                    style="@style/initialize_field_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initializing_setup_birth" />

                <EditText
                    android:id="@+id/nb_birth_initializing_editTextNumber"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="number"
                    android:hint="@string/initializing_setup_edit_hint" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/validate_initializing_button"
        style="@style/bottom_button_fragment"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>